# Speech-Enabled-Interactive-Enquiry-System-in-Tamil

./: README.md  SpecificationsForServer.md
agri_home/: beginsession.php  master_trigger.sh  (+1 more)
agri_home/agri_master/enquiry_system/: complete_old  configure.ac  keyword  keywordmap_1  lexchecklog  log_makelog  log_perllog  phone  rec_out.txt  syl2  t  temp2  test.mfc  testpath  to_do_ideas
agri_home/agri_master/enquiry_system/config_files/: speech_config_file
agri_home/agri_master/enquiry_system/etc/: bi_txt
agri_home/agri_master/enquiry_system/festvox/: sied_ae.out  ssn_hts_demo_clunits_bkp.scm  ssn_tamil_male_lexicon.scm  ssn_tamil_male_lexicon_ae.scm
agri_home/agri_master/enquiry_system/html_pages/: kadir.html  kazhutteu.html  mutxtxa.html  puucci.html  tanxdxeu.html
agri_home/agri_master/enquiry_system/lexicon/: addsil.sh  lex.sh  tiedlist
agri_home/agri_master/enquiry_system/lexicon/lex1/: network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex10/: dictionary  network  syntax
agri_home/agri_master/enquiry_system/lexicon/lex11/: dictionary  network  network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex12/: dictionary
agri_home/agri_master/enquiry_system/lexicon/lex13/: network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex14/: dictionary  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex15/: dictionary  network  network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex16/: network  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex17/: network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex18/: dictionary  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex19/: dictionary  network_isolated
agri_home/agri_master/enquiry_system/lexicon/lex2/: dictionary  network  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex20/: dictionary  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex21/: dictionary  network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex22/: network
agri_home/agri_master/enquiry_system/lexicon/lex23/: network
agri_home/agri_master/enquiry_system/lexicon/lex24/: network_isolated
agri_home/agri_master/enquiry_system/lexicon/lex25/: dictionary  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex26/: network  syntax
agri_home/agri_master/enquiry_system/lexicon/lex27/: network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex28/: dictionary  network_isolated  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex29/: syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex3/: dictionary  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex30/: dictionary  network  network_isolated
agri_home/agri_master/enquiry_system/lexicon/lex31/: syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex32/: dictionary  network_isolated
agri_home/agri_master/enquiry_system/lexicon/lex33/: network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex34/: dictionary  network  network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex35/: syntax
agri_home/agri_master/enquiry_system/lexicon/lex36/: dictionary  network  network_isolated  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex37/: syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex38/: dictionary  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex39/: dictionary  network  network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex4/: dictionary  network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex40/: dictionary  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex41/: network  syntax
agri_home/agri_master/enquiry_system/lexicon/lex42/: dictionary  network  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex43/: dictionary  network  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex44/: network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex45/: dictionary  network  syntax
agri_home/agri_master/enquiry_system/lexicon/lex46/: dictionary  network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex48/: network  network_isolated
agri_home/agri_master/enquiry_system/lexicon/lex49/: network  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex5/: dictionary  network_isolated  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex50/: dictionary  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex51/: dictionary  network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex52/: dictionary  network_isolated  syntax
agri_home/agri_master/enquiry_system/lexicon/lex53/: network_isolated  syntax_isolated
agri_home/agri_master/enquiry_system/lexicon/lex54/: dictionary  network  network_isolated
agri_home/agri_master/enquiry_system/lexicon/lex55/: dictionary  network  syntax  syntax_isolated
agri_home/agri_master/enquiry_system/lists/: ans_map  answers_list  answers_list_ext  answers_list_long  english_tam_map_3sil  keyword_map  kw_trans_utf8_map  likelihood_threshold_map  ques_rec_map  questions_list  recog_out  syl_list  syl_list_tam  text
agri_home/agri_master/enquiry_system/parallel_trial/: sh1
agri_home/agri_master/enquiry_system/prompt-lab/: 1.lab
agri_home/agri_master/enquiry_system/prompt-utt/: 1.utt
agri_home/agri_master/enquiry_system/scripts/: Config.pm.in  Makefile  Makefile.in  areYouLikely  complete  cross_compute_likelihood  enquiry_sys  hts_engine.pl  language_check.pl  recognition  symptom_pest_id  synth_answer  synth_recog  t1  word_pronunciation.pl
agri_home/agri_master/enquiry_system/voices/: tree-dur.inf  tree-gv-mgc.inf
(+278 files in other folders)
